Replaced image downloader implementation for newer android versions